# wdk-safe

./: .gitignore  .markdownlint.yaml  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  Migration.md  README.md  repomix-output.xml  rustfmt.toml  taplo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
crates/wdk-safe/: Cargo.toml
crates/wdk-safe-macros/: Cargo.toml
crates/wdk-safe-macros/src/: lib.rs
crates/wdk-safe/src/: device.rs  driver.rs  error.rs  ioctl.rs  irp.rs  lib.rs  request.rs  thunk.rs
crates/wdk-safe/tests/: macros.rs
docs/: SAFETY.md  SECURITY.md
examples/: Cargo.toml  rust-toolchain.toml
examples/.cargo/: config.toml
examples/hid-filter/: Cargo.toml
examples/hid-filter/.cargo/: config.toml
examples/hid-filter/hid-filter/: Cargo.toml  Makefile.toml  build.rs  hid-filter.inx  hid_filter.inx
examples/hid-filter/hid-filter/src/: lib.rs
examples/ioctl-echo/: Cargo.toml
examples/ioctl-echo/ioctl-echo/: Cargo.toml  build.rs  ioctl_echo.inx
examples/ioctl-echo/ioctl-echo-test/: Cargo.toml
examples/ioctl-echo/ioctl-echo-test/src/: main.rs
examples/ioctl-echo/ioctl-echo/src/: lib.rs
examples/null-device/: Cargo.toml  rust-toolchain.toml
examples/null-device/.cargo/: config.toml
examples/null-device/null-device/: Cargo.toml  Makefile.toml  build.rs  null_device.inx
examples/null-device/null-device/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: ioctl_tests.rs  lib.rs
