# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2025 arelove

[package]
name        = "hid-filter"
version     = "0.1.0"
description = "HID keyboard upper-filter driver — demonstrates wdk-safe abstractions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

# A kernel-mode driver is a cdylib — the linker produces a .sys file.
[lib]
crate-type = ["cdylib"]

[dependencies]
wdk-safe  = { workspace = true }
wdk       = { workspace = true }
wdk-alloc = { workspace = true }
wdk-panic = { workspace = true }
wdk-sys   = { workspace = true }

[build-dependencies]
wdk-build = { workspace = true }

# Kernel mode: no stack unwinding in ring 0.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Tells cargo-make this is a KMDF 1.33 driver.
[package.metadata.wdk.driver-model]
driver-type               = "KMDF"
kmdf-version-major        = 1
target-kmdf-version-minor = 33

[lints]
workspace = true