# Copyright (c) 2026 arelove
# SPDX-License-Identifier: MIT OR Apache-2.0

# NOTE: This example lives in its own workspace because WDK supports only
# one driver configuration per Cargo workspace — the same pattern used in
# microsoft/Windows-rust-driver-samples.

[workspace]
members = ["ioctl-echo"]
resolver = "2"

[workspace.package]
authors = ["arelove"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arelove/wdk-safe"
rust-version = "1.78.0"

[workspace.dependencies]
wdk = "0.4.1"
wdk-alloc = "0.4.1"
wdk-build = "0.5.1"
wdk-panic = "0.4.1"
wdk-safe = { path = "../../crates/wdk-safe" }
wdk-sys = "0.5.1"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
float_arithmetic = "deny"
pedantic = { level = "warn", priority = -1 }
std_instead_of_core = "warn"
