# Copyright (c) 2025 arelove
# SPDX-License-Identifier: MIT OR Apache-2.0

# NOTE: This example lives in its own workspace because WDK supports only
# one driver configuration per Cargo workspace — the same pattern used in
# microsoft/Windows-rust-driver-samples.

[workspace]
resolver = "2"
members  = ["null-device"]

[workspace.package]
authors      = ["arelove"]
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/arelove/wdk-safe"
rust-version = "1.78.0"

[workspace.dependencies]
wdk-safe  = { path = "../../crates/wdk-safe" }
wdk       = "0.4.1"
wdk-alloc = "0.4.1"
wdk-build = "0.5.1"
wdk-panic = "0.4.1"
wdk-sys   = "0.5.1"

[workspace.lints.rust]
missing_docs           = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
float_arithmetic    = "deny"
std_instead_of_core = "warn"