[workspace]

[package]
edition = "2021"
name = "ioctl-echo-test"
version = "0.1.0"

[[bin]]
name = "ioctl_echo_test"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
