# Copyright (c) 2026 arelove
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name        = "ioctl-echo"
version     = "0.1.0"
description = "IOCTL echo driver — demonstrates define_ioctl! and system_buffer with wdk-safe"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

# A kernel-mode driver is a cdylib: the linker produces a .sys file.
[lib]
crate-type = ["cdylib"]

[dependencies]
wdk       = { workspace = true }
wdk-alloc = { workspace = true }
wdk-panic = { workspace = true }
wdk-sys   = { workspace = true }
wdk-safe  = { workspace = true }

[build-dependencies]
wdk-build = { workspace = true }

# Kernel-mode: panic must abort (no stack unwinding in ring 0).
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# WDK metadata — WDM driver (no KMDF version fields needed).
[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lints]
workspace = true