[package]
description = "Null device driver — demonstrates full WDM lifecycle with wdk-safe"
edition.workspace = true
license.workspace = true
name = "null-device"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk-alloc = { workspace = true }
wdk-panic = { workspace = true }
wdk-safe = { workspace = true }
wdk-sys = { workspace = true }

[build-dependencies]
wdk-build = { workspace = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# WDK metadata — WDM driver (не KMDF, нет kmdf-version полей)
[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lints]
workspace = true
